# PicoS2

./: .gitignore  .gitmodules  CMakeLists.txt  HIDINFO.txt  LICENSE  README.md  codes.h  default_macros.txt  host_to_device.h  irq.cpp  irq.cpp.old  keycodes.h  macro_config.cpp  macro_config.h  main.cpp  msc_disk.c  names.h  pico_s2_disk.img  pico_s2_disk_image.inc  ps2_macro_keyboard.cpp  tinyusb_codes.h  usb_codes.h  usb_codes.h.old  usb_hid_keys.h  usb_keyboard.cpp  usb_keyboard.h
AHK Scripts/: Teams Controller.ahk
includes/: tinyusb.h  tinyusb.hpp  tusb_config.h  usb.h  usb_descriptors.c
wiring/: README.md  layout.fzz
